fix: open modal z-index

--- a/src/blocks/modal/_open/modal_open.css
+++ b/src/blocks/modal/_open/modal_open.css
@@ -2,4 +2,5 @@
   visibility: visible;
   opacity: 1;
   pointer-events: auto;
+  z-index: 1;
 }
